--- a/golang-web-dev/012_hands-on/03_hands-on/tpl.gohtml
+++ b/golang-web-dev/012_hands-on/03_hands-on/tpl.gohtml
@@ -7,11 +7,12 @@
 <body>
 
 {{range .}}
-{{.Fall.Term}}{{.AcaYear}}</br>
-{{.Fall.Courses}}</br>
-{{.Spring.Term}}{{.AcaYear}}</br>
-{{.Spring.Courses}}
-
+    {{.Region}}
+    {{range .Hotels}}
+        {{.Name}}<br>
+        {{.Address}} {{.City}} {{.Zip}}<br>
+    {{end}}
 {{end}}
+
 </body>
 </html>
