--- a/golang-web-dev/012_hands-on/05_hands-on/tpl.gohtml
+++ b/golang-web-dev/012_hands-on/05_hands-on/tpl.gohtml
@@ -7,11 +7,11 @@
 <body>
 
 {{range .}}
-{{.Fall.Term}}{{.AcaYear}}</br>
-{{.Fall.Courses}}</br>
-{{.Spring.Term}}{{.AcaYear}}</br>
-{{.Spring.Courses}}
-
+    {{.Meal}}<br>
+    {{range .Item}}
+    {{.Name}} {{.Descrip}} {{.Price}}<br>
+    {{end}}
 {{end}}
+
 </body>
 </html>
